Adicionar components de relatorios relativo a asist e lapr

--- a/ui2/src/app/component/info/aboutus/aboutus.component.html
+++ b/ui2/src/app/component/info/aboutus/aboutus.component.html
@@ -7,13 +7,13 @@
     
     <!-- Team Member 1 -->
     <div class="team-member">
-        <img src="assets/team_member1.jpg" alt="Team Member 1">
+        <img src="assets/grupo/mateus.jpg" alt="Team Member 1">
         <p>Mateus Fernandes</p>
     </div>
 
     <!-- Team Member 2 -->
     <div class="team-member">
-        <img src="assets/joao.png" alt="Team Member 2">
+        <img src="assets/grupo/joao.png" alt="Team Member 2">
         <p>João Rodrigues</p>
     </div>
 
@@ -25,7 +25,7 @@
 
     <!-- Team Member 4 -->
     <div class="team-member">
-        <img src="assets/team_member4.jpg" alt="Team Member 4">
+        <img src="assets/grupo/gabriel.jpg" alt="Team Member 4">
         <p>Gabriel Silva</p>
     </div>
 </div>
