--- a/ui2/src/app/component/asist/mbco/mbco.component.html
+++ b/ui2/src/app/component/asist/mbco/mbco.component.html
@@ -1,7 +1,7 @@
-<div class="background-container"></div>
-<mat-toolbar>
-  <h1 class="h1">RobDroneGO</h1>
-</mat-toolbar>
+
+
+  <h1>RobDroneGO</h1>
+
 
 <body>
     <h2></h2>
