Adicionar about us

--- a/ui2/src/app/component/info/aboutus/aboutus.component.html
+++ b/ui2/src/app/component/info/aboutus/aboutus.component.html
@@ -19,7 +19,7 @@
 
     <!-- Team Member 3 -->
     <div class="team-member">
-        <img src="assets/team_member3.jpg" alt="Team Member 3">
+        <img src="assets/grupo/venancio.png" alt="Team Member 3">
         <p>Ricardo Venâncio</p>
     </div>
 
