Atualizacao de visualizacao component

--- a/ui2/src/app/component/visualizacao/visualizacao.component.html
+++ b/ui2/src/app/component/visualizacao/visualizacao.component.html
@@ -144,6 +144,10 @@
                             </option>
                         </select>
                     </td>
+                    <!--<td>
+                        <label>Modelo Robo:</label>
+                        <input #fileInput type="file" (change)="onFileSelected($event)" accept=".glb">
+                    </td>-->
                 </tr>
                 <tr>
                     <td>
