--- a/ui2/src/app/component/planeamento/planning.component.css
+++ b/ui2/src/app/component/planeamento/planning.component.css
@@ -36,7 +36,8 @@ body {
 }
 
 .box {
-  width: 300px;
+  width: auto;
+  height: auto; 
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
