--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -81,11 +81,18 @@
     <button mat-menu-item (click)="backup()">Estratégia de recuperação de dados</button>
   </mat-menu>
 
+  <!--User Menu-->
+  <button mat-button [matMenuTriggerFor]="userMenu">User</button>
+  <mat-menu #userMenu="matMenu">
+    <button mat-menu-item (click)="criarUser()">Criar User</button>
+  </mat-menu>
+
   <!--Info Menu-->
   <button mat-button [matMenuTriggerFor]="infoMenu" class="spacer">Info</button>
   <mat-menu #infoMenu="matMenu">
     <button mat-menu-item (click)="openAboutUs()">About Us</button>
     <button mat-menu-item (click)="rgpd()">Relatório RGPD</button>
   </mat-menu>
+
 
 </mat-toolbar>
