--- a/ui2/src/app/component/user/pedidoUser/pedido-user.component.css
+++ b/ui2/src/app/component/user/pedidoUser/pedido-user.component.css
@@ -64,3 +64,8 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.button-container {
+  display: flex;
+  gap: 8px; /* Adjust the gap according to your preference */
+}
