--- a/ui2/src/app/component/user/pedidoUser/pedido-user.component.html
+++ b/ui2/src/app/component/user/pedidoUser/pedido-user.component.html
@@ -50,9 +50,12 @@
         <td mat-cell *matCellDef="let pedido"> {{pedido.dataPedido}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Data Mudança Estado">
-        <th mat-header-cell *matHeaderCellDef> Data Mudança Estado</th>
-        <td mat-cell *matCellDef="let pedido"> {{pedido.dataMudancaEstado}} </td>
+      <ng-container matColumnDef="Resposta">
+        <th mat-header-cell *matHeaderCellDef> Resposta</th>
+        <td mat-cell *matCellDef="let pedido" class="button-container">
+          <button mat-button color="primary" (click)="aceitarPedido(pedido)">Aceitar</button>
+          <button mat-button color="warn" (click)="recusarPedido(pedido)">Recusar</button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
