--- a/ui2/src/app/component/user/registarUser/registar-user.component.html
+++ b/ui2/src/app/component/user/registarUser/registar-user.component.html
@@ -16,21 +16,24 @@
           <th><input type="string" [(ngModel)]="user.email" /></th>
         </tr>
         <tr>
-          <th><label>Numero Telemóvel: </label>
-          <th><input type="string" [(ngModel)]="user.phoneNumber" />
+          <th><label>Numero Telemóvel: </label></th>
+          <th><input type="string" [(ngModel)]="user.phoneNumber" /></th>
         </tr>
         <tr>
-          <th><label>Password: </label>
-          <th><input type="string" [(ngModel)]="user.password" />
+          <th><label>Password: </label></th>
+          <th><input type="string" [(ngModel)]="user.password" /></th>
         </tr>
         <tr>
-          <mat-form-field>
-            <mat-label>Role:</mat-label>
-            <mat-select [(ngModel)]="user.roleId" name= "Role Id">
-              <mat-option *ngFor="let role of roles" [value]="role.id">{{role.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
+          <th><label>Role: </label></th>
+          <th>
+            <mat-form-field>
+              <mat-select [(ngModel)]="user.roleId" name="Role Id">
+                <mat-option *ngFor="let role of roles" [value]="role.id">{{role.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </th>
         </tr>
+
       </table>
     </div>
     <div>
