Adicionar sign up UC10 UC20 #95 (G55-38)

--- a/ui2/src/app/component/login/login.component.css
+++ b/ui2/src/app/component/login/login.component.css
@@ -59,3 +59,11 @@ body {
     height: 100%;
     opacity: 0.5; /* Adjust the opacity value as needed */
   }
+
+  .signup-link {
+    cursor: pointer;
+}
+
+.underline-text {
+    text-decoration: underline;
+}
