--- a/ui2/src/app/component/login/login.component.html
+++ b/ui2/src/app/component/login/login.component.html
@@ -6,6 +6,9 @@
             <input type="password" name="password" [(ngModel)]="password">
             <button (click)="submit()">Login</button>
         </form>
+        <div class="signup-link" (click)="signUp()">
+            Não tem uma conta? <span class="underline-text">Registar-se</span>
+        </div>
     </div>
 </body>
 
