--- a/ui2/src/app/component/user/signUp/sign-up.component.html
+++ b/ui2/src/app/component/user/signUp/sign-up.component.html
@@ -22,7 +22,10 @@
         </tr>
         <tr>
           <th><label>Password: </label></th>
-          <th><input type="string" [(ngModel)]="utente.password" /></th>
+          <th><input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="utente.password" /></th>
+        </tr>
+        <tr>
+          <mat-checkbox [checked]="showPassword" (change)="togglePasswordVisibility()">Show/Hide</mat-checkbox>
         </tr>
       </table>
     </div>
