--- a/ui2/src/app/component/user/registarUser/registar-user.component.css
+++ b/ui2/src/app/component/user/registarUser/registar-user.component.css
@@ -36,6 +36,8 @@ body {
 }
 
 .box {
+  height: auto; 
+  width: auto;
   width: 300px;
   padding: 20px;
   background-color: #fff;
@@ -67,3 +69,4 @@ body {
 .box button:hover {
   background-color: #0056b3;
 }
+
