--- a/ui2/src/app/component/user/signUp/sign-up.component.html
+++ b/ui2/src/app/component/user/signUp/sign-up.component.html
@@ -22,11 +22,12 @@
         </tr>
         <tr>
           <th><label>Password: </label></th>
-          <th><input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="utente.password" /></th>
+          <th><input type="password" [(ngModel)]="utente.password" /></th>
+          <!--<th><input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="utente.password" /></th>
         </tr>
         <tr>
           <mat-checkbox [checked]="showPassword" (change)="togglePasswordVisibility()">Show/Hide</mat-checkbox>
-        </tr>
+        </tr>-->
       </table>
     </div>
     <div>
