--- a/ui2/src/app/component/user/signUp/sign-up.component.html
+++ b/ui2/src/app/component/user/signUp/sign-up.component.html
@@ -28,6 +28,16 @@
         <tr>
           <mat-checkbox [checked]="showPassword" (change)="togglePasswordVisibility()">Show/Hide</mat-checkbox>
         </tr>-->
+        <tr>
+          <td>
+            <div style="display: flex; align-items: center;">
+              <input type="checkbox" [(ngModel)]="utente.consent" style="margin-right: 5px;" />
+              <label>Li e aceito a <a [routerLink]="['/rgpd']"> política de privacidade</a></label>
+            </div>
+          </td>
+        </tr>
+        
+        
       </table>
     </div>
     <div>
