Adicionar metodo de apagar user ao front end UC120 #104 (G55-30)

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -81,6 +81,7 @@
   <!--Utente Menu-->
   <button mat-button [matMenuTriggerFor]="utenteMenu">Utente</button>
   <mat-menu #utenteMenu="matMenu">
+    <button mat-menu-item (click)="deleteUser()">Eliminar conta</button>
   </mat-menu>
 
   <!--Visualização-->
