Adicionar metodo para atualizar dados de um utilizador UC100 #102 (G55-32)

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -82,6 +82,7 @@
   <button mat-button [matMenuTriggerFor]="utenteMenu">Utente</button>
   <mat-menu #utenteMenu="matMenu">
     <button mat-menu-item (click)="deleteUser()">Eliminar conta</button>
+    <button mat-menu-item (click)="updateUser()">Atualizar dados</button>
   </mat-menu>
 
   <!--Visualização-->
