Adicionar metodo para fazer download dos dados pessoais UC110 #103 (G55-31)

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -83,6 +83,7 @@
   <mat-menu #utenteMenu="matMenu">
     <button mat-menu-item (click)="deleteUser()">Eliminar conta</button>
     <button mat-menu-item (click)="updateUser()">Atualizar dados</button>
+    <button mat-menu-item (click)="downloadInfo()">Download dos dados pessoais</button>
   </mat-menu>
 
   <!--Visualização-->
