Atualizar metodo sign up front end UC20 #95

--- a/ui2/src/app/component/user/signUp/sign-up.component.html
+++ b/ui2/src/app/component/user/signUp/sign-up.component.html
@@ -31,7 +31,7 @@
         <tr>
           <td>
             <div style="display: flex; align-items: center;">
-              <input type="checkbox" [(ngModel)]="utente.consent" style="margin-right: 5px;" />
+              <input type="checkbox" [(ngModel)]="consent" style="margin-right: 5px;" />
               <label>Li e aceito a <a [routerLink]="['/rgpd']"> política de privacidade</a></label>
             </div>
           </td>
