--- a/ui2/src/app/component/tarefa/tarefa-gestao-requisicao/tarefa-gestao-requisicao.component.css
+++ b/ui2/src/app/component/tarefa/tarefa-gestao-requisicao/tarefa-gestao-requisicao.component.css
@@ -65,6 +65,7 @@ body {
   height: 100%;
 }
 
-.mat-row {
-  cursor: pointer; /* Change the cursor style to pointer */
+.button-container {
+  display: flex;
+  gap: 8px; /* Adjust the gap according to your preference */
 }
