--- a/ui2/src/app/component/tarefa/tarefa-gestao-requisicao/tarefa-gestao-requisicao.component.html
+++ b/ui2/src/app/component/tarefa/tarefa-gestao-requisicao/tarefa-gestao-requisicao.component.html
@@ -35,17 +35,21 @@
           <th mat-header-cell *matHeaderCellDef> Tarefa</th>
           <td mat-cell *matCellDef="let aprovacao"> {{aprovacao.tarefa}} </td>
         </ng-container>
+        
+        <ng-container matColumnDef="Resposta">
+          <th mat-header-cell *matHeaderCellDef> Resposta</th>
+          <td mat-cell *matCellDef="let aprovacao" class="button-container">
+            <button mat-button color="primary" (click)="aceitarRequisicao(aprovacao)">Aceitar</button>
+            <button mat-button color="warn" (click)="recusarRequisicao(aprovacao)">Recusar</button>
+          </td>
+        </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['tipoDispositivo', 'requisitante', 'estado', 'tarefa']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['tipoDispositivo', 'requisitante', 'estado', 'tarefa'];" (click)="handleRowSelect(row)"></tr>
+        <tr mat-header-row *matHeaderRowDef="['tipoDispositivo', 'requisitante', 'estado', 'tarefa', 'Resposta']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['tipoDispositivo', 'requisitante', 'estado', 'tarefa', 'Resposta'];"></tr>
       </table>
 
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
       <button (click)="goBack()">Back</button>
-    </div>
-    <div>
-      <button (click)="aceitarRequisicao()" class="green-button">Aceitar</button>
-      <button (click)="recusarRequisicao()" class="red-button">Recusar</button>
     </div>
   </div>
 </body>
