--- a/ui2/src/app/component/visualizacao/visualizacao.component.html
+++ b/ui2/src/app/component/visualizacao/visualizacao.component.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+
+
 <head>
     <meta charset="utf-8">
     <title>Basic Thumb Raiser</title>
@@ -111,6 +113,7 @@
 </head>
 
 <body>
+    <div id="info">Detetado. Pressiona L!</div>
     <div id="parent">
         <div id="views-panel">
             <table class="views">
