G55-39 Added frontend integration

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -64,6 +64,7 @@
     <button mat-menu-item (click)="gerirRequisicao()">Gerir Requisições</button>
     <button mat-menu-item (click)="listarTarefasNaoAprovadas()">Listar tarefas não aprovadas</button>
     <button mat-menu-item (click)="listarTarefas()">Listar Tarefas</button>
+    <button mat-menu-item (click)="sequenciaTarefas()">Sequência de Tarefas Aprovadas </button>
   </mat-menu>
 
   <!--Gestor de Frota Menu-->
