--- a/ui2/src/app/component/tarefa/tarefa-list/tarefa-list.component.html
+++ b/ui2/src/app/component/tarefa/tarefa-list/tarefa-list.component.html
@@ -14,14 +14,12 @@
             <mat-form-field>
                 <table>
                     <tr>
-                      <th><label>Estado: </label></th>
-                      <th>
-                        <mat-form-field>
-                          <mat-select [(ngModel)]="estado" name="estado">
-                            <mat-option *ngFor="let e of estados" [value]="e">{{estado}}</mat-option>
-                          </mat-select>
-                        </mat-form-field>
-                      </th>
+                      <mat-form-field>
+                        <mat-label>Estado</mat-label>
+                        <mat-select [(ngModel)]="requisicao.estado">
+                          <mat-option *ngFor="let option of options" [value]="option">{{option}}</mat-option>
+                        </mat-select>
+                      </mat-form-field>
                     </tr>
                 </table>
                 <button (click)="listAprovacaoEstado()">Search</button>
